[tool.poetry]
name = "macwinnie-py-pushover-client"
version = "2.0.8"
description = "Pushover client for Python projects."
authors = ["macwinnie <dev@macwinnie.me>"]
license = "GNU AFFERO GENERAL PUBLIC LICENSE"
readme = "README.md"
homepage = "https://macwinnie.github.io/python-pushover/"
repository = "https://github.com/macwinnie/python-pushover/"
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]
packages = [
    { include = "macwinnie_py_pushover_client" },
]

[tool.poetry.dependencies]
python = ">=3.13,<4"
macwinnie-pyhelpers = "^3.0.0"
macwinnie-sqlite3 = "^1.1.1"


[dependency-groups]
dev = [
    "pre-commit (>=4.6.0,<5.0.0)",
    "build (>=1.4.3,<2.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "twine (>=6.2.0,<7.0.0)",
    "pdoc (>=16.0.0,<17.0.0)",
    "lxml (>=6.1.0,<7.0.0)",
    "tomlkit (>=0.14.0,<0.15.0)",
    "gitpython (>=3.1.46,<4.0.0)",
    "testfixtures (>=11.0.0,<12.0.0)"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.1"
addopts = "-ra -q"
testpaths = [
    "tests",
]

# [tool.coverage.run]
# omit = ["*/tests/*"]

# [tool.coverage.report]
# fail_under = 100
